# WhyDoYou-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: tests.yml
assets/locale/: en.base.locale  ru.locale
migrations/: 20210429_based.sql
src/: lib.rs  main.rs
src/bots/: mod.rs  tg.rs
src/engine/: default_images.rs  engine.rs  local_ffmpeg.rs  mod.rs
src/models/: content_model.rs  db_conn.rs  error.rs  mod.rs  run_options.rs  text_size_box.rs  v_data.rs
src/utils/: locale.rs  logger.rs  mod.rs  size_utils.rs  string_utils.rs  version.rs
tests/: db.rs  engine.rs
