[package]
name = "why_do_you_bot"
description = "Meme-quote bot for Telegram"
version = "1.0.0"
authors = [
    "Roman Bessonov <roma.bessonov@gmail.com>",
    "Mihail Preis <mihail.preis@gmail.com>"
]
readme = "README.md"
keywords = ["telegram", "telegram-bot", "meme", "quote"]
license = "MIT"
repository = "https://github.com/MihailPreis/WhyDoYou-bot/"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "db"
path = "tests/db.rs"
required-features = ["db"]

[[test]]
name = "engine"
path = "tests/engine.rs"
required-features = []

[features]
tg = ["teloxide"]
db = ["sqlx"]

[dependencies]
teloxide = { version = "0.11.2", features = ["auto-send", "rustls", "ctrlc_handler"], optional = true, default-features = false }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"], optional = true}
dotenv = "0.15"
log = "0.4"
fern = "0.6.1"
clap = { version = "4.0.26", features = ["color", "derive"] }
chrono = "0.4"
regex = "1.4"
lazy_static = "1.4"
imageproc = {version = "0.23.0", features=["default"] }
rusttype = "0.9"
image = "0.24.2"
reqwest = { version = "0.11", features = ["multipart", "rustls-tls"], default-features=false }
cfg-if = "1.0.0"
rand = "0.8"
uuid = { version = "1.1.1", features = ["v4"] }
mime = "0.3.16"
include_dir = "0.7.2"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
debug = 0
strip="symbols"